# churn-outreach-modeling

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
src/: churn_classification_model.py  churn_outreach_selection.py  create_feat_df.py  data_exploration.py  utils.py
