[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [
    {name = "TamarReitich",email = "tamar.stolero@gmail.com"}
]
requires-python = ">=3.11 <3.15"
dependencies = [
    "numpy (<2)",
    "pandas (<3)",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
    "torch (==2.2.2)",
    "sentence-transformers (<3)",
    "torchvision (==0.17.2)",
    "torchaudio (==2.2.2)",
    "transformers (<4.41)",
    "xgboost (>=3.1.3,<4.0.0)",
    "black (>=26.1.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
